force-app/src/objects/AccreditationTrack__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Default for new Accreditations</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <label>Accreditation Track</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>IsActive__c</columns>
        <columns>IsDefault__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Accreditation Track Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accreditation Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>